--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 SESSION_ID =
 OWNER = '254724265444'
+POSTGRESQL_URL ='postgres://vajiratech_user:oSIFl2xmSojMZ0rkzdd0g0W6msuVTpNN@dpg-cpd7fjv109ks73e5gtig-a.frankfurt-postgres.render.com/vajiratech'
