--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-SESSION_ID =
+SESSION_ID = 'VAJIRA-MD=3ZsRUQAa#ii5u_OKjb8nV6XSbV7CmXfXR5eU4goEvSqveEpALo08'
 OWNER = '254724265444'
 POSTGRESQL_URL ='postgres://vajiratech_user:oSIFl2xmSojMZ0rkzdd0g0W6msuVTpNN@dpg-cpd7fjv109ks73e5gtig-a.frankfurt-postgres.render.com/vajiratech'
